--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
          </div> 
          <div class="info"> 
              <h1>Ihsana I</h1> 
-             <p>Web designer</p> 
+             <p>Blockchain developer</p> 
              <p>Email: iihsana624@gmail.com</p> 
-             <p>Phone: +91 6238733088 </p> 
+             <p>Phone: +91**********</p> 
              <p>Kollam,Kerala</p>
      </div> 
  </body> 
