--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <h1>Ihsana I</h1> 
              <p>Blockchain developer</p> 
              <p>Email: iihsana624@gmail.com</p> 
-             <p>Phone: +91**********</p> 
+             <p>Phone: +916238733088</p> 
              <p>Kollam,Kerala</p>
      </div> 
  </body> 
